@@ -32932,7 +32932,10 @@ namespace Thetis
             public void EnqueueOutbound(string data)
             {
                 if (!_enabled || _direction == MMIODirection.IN) return;
-                
+
+                // limit to max. Not nice, but it is not expected for this to ever happen
+                if (_outbound_queue.Count >= 500) _outbound_queue.TryDequeue(out _);
+
                 _outbound_queue.Enqueue(data);
             }
             public string DequeueOutbound()
