@@ -72,6 +72,7 @@ Please report any issue over on [GitHub here](https://github.com/ramdor/Thetis/i
 - [fix] vfo band text now updated when frequency changes for the multimeter vfo item. Note: rate limited to 250ms unlike legacy meter
 - [fix] rx2 mnf position now correctly located when in panadaptor view
 - [fix] fix issue that could cause repeated errors in mmio when a key is not found, perhaps caused by old db
+- [fix] outbound mmio queue fix for data node
 
 ## v2.10.3.8 - Change Log
 - [fix] maintain delta checkbox now greyed if adjust min to noise floor is unchecked
